I think this works

--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,12 @@
 @import "tailwindcss";
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Quita las flechas en Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
